correção teoria de compasso/correção do tempo do software a partir da formula de compasso da folha/adição da formula de compasso no código de barras na geração da folha

--- a/folha_criada.html
+++ b/folha_criada.html
@@ -189,19 +189,19 @@ margin-right: -10em;
 <td></td>
 </tr>
 <tr>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
 </tr>
 <tr>
 <td></td>
@@ -309,19 +309,19 @@ margin-right: -10em;
 <td></td>
 </tr>
 <tr>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
 </tr>
 <tr>
 <td></td>
@@ -429,19 +429,19 @@ margin-right: -10em;
 <td></td>
 </tr>
 <tr>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
 </tr>
 <tr>
 <td></td>
@@ -549,26 +549,26 @@ margin-right: -10em;
 <td></td>
 </tr>
 <tr>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
+<td style='border-top: none; border-bottom: solid gray 1px'></td>
 </tr>
 </tobdy>
 </table>
 </div>
 </body>
 <script type='text/javascript'>
-$('#barcode').barcode('32000000', 'ean8', {
+$('#barcode').barcode('32040800', 'ean8', {
 showHRI: false,
 barWidth: 5,
 });
